# kinetic_mvp_main

./: .gitignore  readme.md
.postman/: config.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/adapters/coinbase/: client.py
backend/app/adapters/privy/: client.py
backend/app/api/: onramp.py  workflows.py
backend/app/core/: config.py  logging.py
backend/app/db/: engine.py  models.py
backend/app/engine/: runner.py
backend/app/services/: banxa_client.py  onramp_service.py
backend/app/ui/templates/: index.html
backend/app/workflows/: registry.py
backend/app/workflows/templates/: __init__.py  managed_treasury.py  treasury_demo.py
backend/kinetic_mvp_backend.egg-info/: SOURCES.txt  requires.txt
docs/: adr-001-mock-mode.md  architecture.md  onramp.md  overview.md
docs/ai/: architecture-principles.md  feature-template.md  qa-checklist.md
docs/postman/: Kinetic Local.postman_environment.json  Kinetic MVP API (Local).postman_collection.json
infra/: docker-compose.yml
postman/globals/: workspace.postman_globals.json
